# Kaspersky_Test_C_-

./: CMakeLists.txt  README  README.md  client.cpp  client.h  server_display.cpp  server_display.h  server_process.cpp  server_process.h
common/: http.cpp  http.h  queue.cpp  queue.h  socket.cpp  socket.h
